CSS: fix checkbox alignment for Firefox

--- a/public/stylesheets/sass/admin.sass
+++ b/public/stylesheets/sass/admin.sass
@@ -487,6 +487,9 @@ ul.nav_bar
       font-family: "Helvetica Neue",Arial,Helvetica,sans-serif
       font-size: 1em
     
+    input[type="checkbox"]
+      width: auto
+    
     span.cke_skin_kama
       display: block
       margin: 0 5px 0 120px
